<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/fiveteen"
    app:cardCornerRadius="@dimen/ten"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/lightwhite"
    android:layout_margin="@dimen/ten">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aims_language"
            android:text="@string/language"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/view"
            android:layout_below="@id/org_name"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="#000000"/>
        <TextView
            android:id="@+id/aims_reason_for_learning"
            android:text="@string/reason_for_learning"
            android:fontFamily="sans-serif"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/blue"
            android:textSize="@dimen/sixteensp"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="normal"
            android:layout_below="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/aims_exact_thing"
            android:text="@string/exact_thing"
            android:textColor="@color/blue"
            android:textSize="@dimen/sixteensp"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/org_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aims_cef_level"
            android:text="@string/cef_level"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/blue"
            android:textSize="@dimen/sixteensp"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/ten"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/aims_purpose_language"
            android:text="@string/purpose_language"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/blue"
            android:textSize="@dimen/sixteensp"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/ten"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>